* Better jumps from the outline window. Last good and the current parsed
  info are taken into account.
* Better undo of the automatically trimmed empty opened lines.
* Search indicators are configurable now per skin.
* Make Ctrl+PgUp going to the previous tab while Ctrl+PgDwn to the next
* New feature: ui configurable monospaced font
* Fix: opening another user (read only) project now works

2013 Jun 29 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 2.0.2
* New feature: editor calltips (Ctrl+/) and auto calltips (switchable via the
  Options menu) when '(' is entered.
* Fix: crash on Ubuntu 12.04 (possibly on other platforms too) in case of some
  styles. Issue #388.
* Fix: extra commas in the 'author' field when a new project is created on
  Ubuntu. Issue #387.
* Fix: extra long signatures in a context help do not limit min window width.
  Issue #386.
* Better completion for numpy and scipy names
* Including scipy for better rope help

2013 Jun 18 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 2.0.1
* Replacing the 'file' utility calls with magic module included in thirdparty
  directory.


2013 Jun 02 Sergey Satskiy <sergey.satskiy@gmail.com>

* Release 2.0
* Initial implementation of the debugger.
* Project viewer restores the previous session expanded directories at the
  start automatically.
* More bound scintilla lexers
* Unhandled exceptions hook now saves the trace back and the log window content
  in a file.
* Some autocomplete improvements
* Allow explicit reloading even if a buffer is not modified.
* File outside modification detection now includes a file size.
* Files deleted via IDE UI are removed from the recent files list as well.
* Bug fix: respect multibyte chars when search incrementally
* Bug fix: autocomplition for non-ascii text did not work.
* Main menu and the text editor context menu now have 'open in browser'
  item.
* Main menu and the text editor context menu now have 'downdload and show'
  item.